更新美國四點制的分數

--- a/app/views/scores/gpa.html.erb
+++ b/app/views/scores/gpa.html.erb
@@ -105,11 +105,11 @@
         { 'up':0,  'down':0,  'gpa_point':0.0, 'grade_letter':'X'  }
     ]
     let us40_table = [
-        { 'up':100,'down':80, 'gpa_point':4.0, 'grade_letter':'NA' },
-        { 'up':79, 'down':70, 'gpa_point':3.0, 'grade_letter':'NA'  },
-        { 'up':69, 'down':60, 'gpa_point':2.0, 'grade_letter':'NA' },
-        { 'up':59, 'down':50, 'gpa_point':1.0, 'grade_letter':'NA' },
-        { 'up':49, 'down':0,  'gpa_point':0.0, 'grade_letter':'NA'  },
+        { 'up':100,'down':80, 'gpa_point':4.0, 'grade_letter':'A' },
+        { 'up':79, 'down':70, 'gpa_point':3.0, 'grade_letter':'B'  },
+        { 'up':69, 'down':60, 'gpa_point':2.0, 'grade_letter':'C' },
+        { 'up':59, 'down':50, 'gpa_point':1.0, 'grade_letter':'D' },
+        { 'up':49, 'down':0,  'gpa_point':0.0, 'grade_letter':'E'  },
     ]
 
     let calc_gpa = function(gpa_table, course_list){
