--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -122,7 +122,8 @@
 	$(document).ready(function(){
 		//toastr["success"]("已更新到104上的課程囉!!!");
 <% if current_user.canShare? %>	
-		setCopyToClipboardOnClick($('#copy-it-simu'), '已複製到剪貼簿');
+        new Clipboard ('#copy-it-simu');
+        $('#copy-it-simu').click(function(){toastr["success"]('已複製到剪貼簿');});
 <% end %>			
 		
 		$(".pop-over").popover({
