--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -91,7 +91,7 @@
 	</div>
 	<!-- End of banner -->
 	
-	<!--- form group --->
+	<!-- form group -->
 	<div class="container">
 		<div class="row">
 			<%=form_tag "/events", {class:"form-wrapper form-horizontal center-block col-xs-12", role:"form", method:"GET"} do %>
