--- a/app/views/discusses/main_form.html.erb
+++ b/app/views/discusses/main_form.html.erb
@@ -18,7 +18,7 @@
 				<div class="form-group">
 					<label class="col-sm-2 control-label">內容</label>
 					<div class="col-sm-10">
-						<%= f.text_area "content", :class => "form-control",required:"true",placeholder:"",rows:"10" %>
+						<%= f.text_area "content", :class => "form-control",required:"true",placeholder:"",rows:"10", value:@default_text%>
 					</div>
 					<%=f.hidden_field "course_teachership_id",value:"#{@ct.try(:id)}" %>
 				</div>
