刪除不存在model索引

--- a/app/views/discusses/_modal_content.html.erb
+++ b/app/views/discusses/_modal_content.html.erb
@@ -107,7 +107,7 @@
 			//alert("!!!");
 		}
 		//$container.find("[name='sub_discuss[is_anonymous]']").val(anonymous);
-		$("#delte_sub_but").attr("href","/discusses/"+id+"?type=sub");
+		$("#delete_sub_but").attr("href","/discusses/"+id+"?type=sub");
 	}
 	function toggleAvatar($obj){
 		$container=$obj.parent().parent().parent().parent();
