--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -61,8 +61,8 @@
 
               <% if @tags_by_id.key?( cd.id )%>
                   </br>
-                  <% c_tags = @tags_by_id[cd.id]%>
-                  <% c_tags.each do |tag| %>
+                  <% info_tags = @tags_by_id[cd.id]%>
+                  <% info_tags.each do |tag| %>
                       <span class="label <%= tag[:label_type]%> general-edu-info" data-toggle="tooltip" data-placement="bottom" title="<%=tag[:title]%>"> <%=tag[:name]%></span>
                   <% end %>
               <% end %>
