--- a/app/views/course_content/single_compare.html.erb
+++ b/app/views/course_content/single_compare.html.erb
@@ -115,9 +115,9 @@
 		radialProgress(document.getElementById('sweety')).label("甜度 (<%=@ct_compare_json[:sweety].arr.length%>人)").diameter(150).value(<%=@ct_compare_json[:sweety].avg_score.to_f * 20%>).render();
 		radialProgress(document.getElementById('hardness')).label("深度 (<%=@ct_compare_json[:hardness].arr.length%>人)").diameter(150).value(<%=@ct_compare_json[:hardness].avg_score.to_f * 20%>).render();
 		
-		gen_raty("single-rating-cold",ct_id,"cold",userCtRated.cold,!logined||userCtRated.cold!=null); 
-		gen_raty("single-rating-sweety",ct_id,"sweety",userCtRated.sweety,!logined||userCtRated.sweety!=null); 
-		gen_raty("single-rating-hardness",ct_id,"hardness",userCtRated.hardness,!logined||userCtRated.hardness!=null); 
+		gen_raty("single-rating-cold",ct_id,"cold",userCtRated.cold,!logined); 
+		gen_raty("single-rating-sweety",ct_id,"sweety",userCtRated.sweety,!logined); 
+		gen_raty("single-rating-hardness",ct_id,"hardness",userCtRated.hardness,!logined); 
 		
 	});	
 </script>
