Add missing department

--- a/app/views/courses/search/_undergrad_options.html.erb
+++ b/app/views/courses/search/_undergrad_options.html.erb
@@ -20,6 +20,7 @@
 <option value="281">人社系</option>
 <option value="282">傳科系</option>
 <option value="284">人文社會學院</option>
+<option value="616">百川學士學位學程</option>
 <option value="285">生物科技學院</option>
 <option value="286">資訊學院</option>
 <option value="287">工學院</option>
