--- a/app/views/courses/search/_mini_form.html.erb
+++ b/app/views/courses/search/_mini_form.html.erb
@@ -14,7 +14,7 @@
   &nbsp;&nbsp;&nbsp;&nbsp;
   <div class="checkbox">
     <label style="font-size:16px;">
-          <%=check_box_tag "adv_toggle",params[:adv_toggle],params[:adv_toggle],onchange: "$('#adv-search').toggleClass('hidden');$('#q_semester_id_eq').val('');$('#degree').val('0');change_degree($('#degree'));" %>
+          <%=check_box_tag "adv_toggle",params[:adv_toggle],params[:adv_toggle],onchange: "$('#adv-search').toggleClass('hidden');$('#degree').val('0');change_degree($('#degree'));" %>
       進階搜尋
     </label>
   </div>
